# ocado

part_1/: main.py  requirements.txt  test.py  test_int.py
part_2/: README.md
part_2/worker/: pyproject.toml
part_2/worker/src/: aws.py  debts_simplifier.py  main.py
part_2/worker/test/: conftest.py  test_debts_simplifier.py  test_main.py
