[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = []

packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.79"
pydantic-settings = "^2.2.1"
mypy-boto3-s3 = "^1.34.65"
mypy-boto3-sqs = "^1.34.0"
moto = "^5.0.5"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
